--- a/server/pom.xml
+++ b/server/pom.xml
@@ -18,6 +18,11 @@
 	</properties>
 
 	<dependencies>
+	<dependency>
+		<groupId>org.commonmark</groupId>
+		<artifactId>commonmark</artifactId>
+		<version>0.24.0</version>
+	</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
