--- a/server/pom.xml
+++ b/server/pom.xml
@@ -24,6 +24,11 @@
 		<version>0.24.0</version>
 	</dependency>
 		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.18.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
