--- a/client/pom.xml
+++ b/client/pom.xml
@@ -17,6 +17,11 @@
 
 	<dependencies>
 		<dependency>
+        	<groupId>org.glassfish.jersey.media</groupId>
+        	<artifactId>jersey-media-multipart</artifactId>
+        	<version>2.35</version>
+    	</dependency>
+		<dependency>
 			<groupId>csep</groupId>
 			<artifactId>commons</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
