Refactor WebSocket dependencies and improve code formatting in CollectionConfigTest

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -129,31 +129,27 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- Websocket -->
+		<!-- WebSocket dependencies -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-websocket</artifactId>
-			<version> 6.1.14 </version>
+			<version>6.1.14</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-messaging</artifactId>
-			<version> 6.1.14 </version>
+			<version>6.1.14</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
 			<version>2.17.2</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.17.2</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.java-websocket</groupId>
 			<artifactId>Java-WebSocket</artifactId>
