--- a/client/pom.xml
+++ b/client/pom.xml
@@ -26,7 +26,7 @@
 		<dependency>
         	<groupId>org.glassfish.jersey.media</groupId>
         	<artifactId>jersey-media-multipart</artifactId>
-        	<version>2.35</version>
+        	<version>${version.jersey}</version>
     	</dependency>
 		<dependency>
 			<groupId>csep</groupId>
