UI rework to include embedded files, resizing and additional shortcuts

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -155,6 +155,11 @@
 			<artifactId>Java-WebSocket</artifactId>
 			<version>1.5.3</version>
 		</dependency>
+		<dependency>
+			<groupId>io.github.mkpaz</groupId>
+			<artifactId>atlantafx-base</artifactId>
+			<version>2.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
