Fixed refreshing and field clearing with collection

--- a/client/src/main/resources/client/collections/collections_config.json
+++ b/client/src/main/resources/client/collections/collections_config.json
@@ -1,1 +1,1 @@
-{"collections":[{"title":"Default Collection","name":"Default Collection","server":"http://localhost:8080/"},{"title":"VU","name":"VU-Nico","server":"https://vu/"},{"title":"Ringo","name":"TheBeatles","server":"http://localhost:8080"}]}
+{"collections":[{"title":"Default Collection","name":"Default Collection","server":"http://localhost:8080/"},{"title":"VU","name":"VU-Nico","server":"https://vu/"},{"title":"Ringo","name":"TheBeatles","server":"http://localhost:8080"},{"title":"Hello","name":"Bu","server":"https://fjhjhhajd"}]}
