--- a/client/src/main/resources/client/collections/collections_config.json
+++ b/client/src/main/resources/client/collections/collections_config.json
@@ -1,1 +1,1 @@
-{"collections":[{"title":"Default Collection","name":"Default Collection","server":"http://localhost:8080/"}]}
+{"collections":[{"title":"Default Collection","name":"Default Collection","server":"http://localhost:8080/"},{"title":"Mpampas","name":"mpampas","server":"denkserw"},{"title":"Mama","name":"asd","server":"den kserw"}]}
